--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ services: mysql
 
 env:
   global:
-    - DJANGO_SETTINGS_MODULE="my_site.travis_settings"
+    - DJANGO_SETTINGS_MODULE="djangotravis.settings"
     - PYTHONPATH="/home/travis/build/my_github_name/my_github_project"
     - PIP_USE_MIRRORS=true
   matrix:
@@ -15,7 +15,7 @@ env:
 
 #commands to install dependencies
 install:
-  - pip install -q Django==$DJANGO
+  # - pip install -q Django==$DJANGO
   - pip install -q -r requirements.txt
 
 before_script:
