--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,8 @@ install:
 
 before_script:
   - mysql -e 'create database travis_ci_db;'
+  - python manage.py makemigrations
+  - python manage.py migrate
   # - python manage.py syncdb --noinput
 
 #command to run the test suite
